--- a/manual.tex
+++ b/manual.tex
@@ -1,42 +1,50 @@
 %!TEX program = xelatex
 
-\documentclass{boscmanual}
+\documentclass[lang=zh]{boscmanual}
 \usepackage[sectionbib]{chapterbib}
 
+% title information
+\title{BOSC手册模版}
+\subtitle{An Unofficial Manual Template for BOSC}
+\author{BOSC Team}
+\reviewer{BOSC Team}
+\note{This is a note!}
+\docstate{草稿} % 草稿/已审校/已冻结/已发布/已废弃
+\date{2024/01/19}
+\openright{% 
+    Your openright here!
+}
+
+% 
 \includeonly{
-    preface/preface,
-    chapter1/chapter1,
-    chapter2/chapter2,
+    preface/main,
+    chapter1/main,
+    chapter2/main,
+    chapter3/main,
 }
 
 \begin{document}
+
+% ==============================================================================
+% Title page
+% ==============================================================================
+\maketitle
+
 \frontmatter
-\titlepage%
-    {BOSC手册模版} % chinese name
-    {A Manual Template for BOSC} % english name
-    {BOSC Team} % au
-    {BOSC Team}
-
-\titlecontents{chapter}[0pt]{\vspace{0.2cm}\bfseries\large}
-    {\thecontentslabel\hspace{0.5em}}{}{\hfill\contentspage}
-
-\titlecontents{section}[1.5em]{\vspace{0.2cm}}
-    {\contentslabel{1.5em}\hspace{0.5em}}{}{\titlerule*[0.5pc]{.}\contentspage}
 
 
-\include{preface/preface}
+\include{preface/main}
 
 \tableofcontents
-
-
-
 \listoffigures
 \listoftables
+
 \mainmatter
 
-\part{基础使用}
-\include{chapter1/chapter1}
-\include{chapter2/chapter2}
+\part{模版介绍}
+\include{chapter1/main}
+\include{chapter2/main}
+\include{chapter3/main}
 
 \backmatter
 \chapter{附录}
