--- a/boscmanual.cls
+++ b/boscmanual.cls
@@ -13,11 +13,10 @@
 \PassOptionsToClass{
   UTF8,
   a4paper,
-  twoside,
+  oneside,
   openany,
   scheme = plain,
-  fontset = none,
-  12pt
+  fontset = none
 }{ctexbook}
 
 \LoadClass{ctexbook}
@@ -46,26 +45,29 @@
 \RequirePackage[normalem]{ulem}
 \RequirePackage{amssymb}
 \RequirePackage{kvoptions}
-
+\RequirePackage{changepage}
+\RequirePackage{booktabs}
+\RequirePackage{ragged2e}
 \SetupKeyvalOptions{family=bosc, prefix=bosc@, setkeys=\kvsetkeys}
-
 
 \setlength{\parindent}{2em}
 
 % ==============================================================================
 % Color
 % ==============================================================================
-\definecolor{titlecolor}{RGB}{0,0,0} % {41, 94, 163}
-\definecolor{notecolor}{RGB}{255,17,0}
+\definecolor{maincolor}{RGB}{41, 94, 163}
+\definecolor{notecolor}{RGB}{41, 94, 163}
 
 % ==============================================================================
 % Font
 % ==============================================================================
 \setCJKmainfont{SimSun}
 \setCJKmonofont{SimSun}
-\setmainfont{Times New Roman}
+\setmainfont{NeoSansPro-Regular.ttf}[BoldFont=NeoSansPro-Bold.otf, ItalicFont=NeoSansPro-Italic.otf,
+BoldItalicFont=NeoSansPro-BoldItalic.otf]
 \setsansfont{DejaVu Sans}
 \setmonofont{Consolas}
+
 \setCJKmainfont[BoldFont={FZHei-B01},ItalicFont={FZKai-Z03}]{FZShuSong-Z01}
 \setCJKsansfont{FZHei-B01}
 \setCJKmonofont{FZFangSong-Z02}
@@ -112,7 +114,8 @@
   textheight=215mm,
   inner=23mm,
   outer=18mm,
-  top=25.4mm, bottom=25.4mm,
+  marginparwidth = 106pt,
+  top=25.4mm, bottom=25.4mm, left = 45mm,
   headheight=2.17cm,
   headsep=4mm,
   footskip=12mm
@@ -135,33 +138,26 @@
   \end{flushright}
   \vspace*{5ex}
   \hspace{0.05\textwidth}\begin{minipage}{.9\textwidth}
-    \begin{flushleft}
-    {\zihao{2}{\color{titlecolor}\textbf{\@title}}} 
-    \color{titlecolor}\rule{\linewidth}{1.5pt} \\
+    \begin{flushright}
+    {\zihao{2}{\color{maincolor}\textbf{\@title}}} 
+    \color{maincolor}\rule{\linewidth}{1.5pt} \\
     \vspace{2ex}
-    {\zihao{1}\color{titlecolor}\textsf{\@subtitle}} \\
+    {\zihao{1}\color{maincolor}\textsf{\@subtitle}} \\
     \vspace{15ex}
-    {\zihao{4}\color{titlecolor}\textsf{\@author}~\textbf{编著}} \\
+    {\zihao{4}\color{maincolor}\textsf{\@author}~\textbf{编著}} \\
     \vspace{1ex}
-    {\zihao{4}\color{titlecolor}\textsf{\@reviewer}~\textbf{审校}} \\
+    {\zihao{4}\color{maincolor}\textsf{\@reviewer}~\textbf{审校}} \\
+    \vspace{10ex}
+    {\zihao{4}\color{maincolor}\textbf{文档状态：}\color{red}\textbf{\@docstate}} \\
+    \vspace{2ex}
+    {\zihao{4}\color{maincolor}\textbf{最近修改时间：}\color{red}\textbf{\@date}}        
+    \end{flushright}
+    \begin{flushleft}
     \vspace{15ex}
     {\zihao{4}{\color{notecolor}\textbf{Note: }}\color{black}\textsf{\@note}}
     \end{flushleft}
   \end{minipage}
   \vfill
-  \begin{center}
-      \zihao{4}\textbf{文档状态：\color{red}\@docstate} \\
-      \vspace{1ex}
-      \zihao{4}\textbf{最近修改时间：\color{red}{\@date}}
-  \end{center}
-  \vspace{1ex}
-  \begin{center}
-      \zihao{4}\textbf{北京}
-  \end{center}
-  \vspace{.1ex}
-  \begin{center}
-      \zihao{4}BEIJING
-  \end{center}
   \newpage
   \begin{flushleft}
   \vspace*{\fill}
@@ -184,13 +180,17 @@
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{2}
 
-\titlecontents{chapter}[0pt]{\vspace{0.2cm}\bfseries\large}
+
+\titlecontents{part}[0pt]{\vspace{0.2cm}\bfseries\Large\color{maincolor}}
     {\thecontentslabel\hspace{0.5em}}{}{\hfill\contentspage}
 
-\titlecontents{section}[1.5em]{\vspace{0.2cm}}
-    {\contentslabel{1.5em}\hspace{0.5em}}{}{\titlerule*[0.5pc]{.}\contentspage}
+\titlecontents{chapter}[0pt]{\vspace{0.2cm}\bfseries\large\color{maincolor}}
+    {\thecontentslabel\hspace{0.5em}}{}{\hfill\contentspage}
 
-\titlecontents{subsection}[1.5em]{\vspace{0.2cm}}
+\titlecontents{section}[1.5em]{\vspace{0.2cm}\color{maincolor}}
+    {\contentslabel{1.5em}\hspace{2.5em}}{}{\titlerule*[0.5pc]{.}\contentspage}
+
+\titlecontents{subsection}[1.5em]{\vspace{0.2cm}\color{maincolor}}
     {\contentslabel{1.5em}\hspace{2.5em}}{}{\titlerule*[0.5pc]{.}\contentspage}
 
 % ==============================================================================
@@ -201,24 +201,25 @@
 
 \renewcommand\headrulewidth{0pt}
 \renewcommand\footrulewidth{.5pt}
-\futurelet\TMPfootrule\def\footrule{{\color{black}\TMPfootrule}}
+\futurelet\TMPfootrule\def\footrule{{\color{maincolor}\TMPfootrule}}
 
 \renewcommand{\chaptermark}[1]{\markboth{第\zhnum{chapter}章\hspace{1em}#1}{}}
 \renewcommand{\sectionmark}[1]{\markright{#1}}
 
-\fancyfoot[LE]{\thepage\quad\vrule\quad\leftmark}
-\fancyfoot[RO]{\leftmark\quad\vrule\quad\thepage}
+\fancyfoot[LE]{\thepage\quad\vrule\quad\color{maincolor}\leftmark}
+\fancyfoot[RO]{\color{maincolor}\leftmark\quad\vrule\quad\thepage}
 
 % ==============================================================================
 % Part
 % ==============================================================================
 \titleformat{\part} % command
 [display] % shape
-{\bfseries} % format
+{\bfseries\color{maincolor}} % format
 {
   \zihao{1}\hfill 第{\zhnum{part}}部分
   \vspace{1ex}
   \hrule width \hsize height .5pt
+  \thispagestyle{empty}
 } % label
 {1ex} % sep
 {
@@ -227,13 +228,13 @@
 } % before-code
 [\vspace{1ex}]
 
-\CTEXsetup[name={第,部分},number={\chinese{part}},format={\zihao{-4}\bfseries\raggedright}]{part}
+\CTEXsetup[name={第,部分},number={\chinese{part}},format={\zihao{-4}\bfseries\raggedright\color{maincolor}}]{part}
 % ==============================================================================
 % Chapter
 % ==============================================================================
 \titleformat{\chapter} % command
 [display] % shape
-{\bfseries} % format
+{\bfseries\color{maincolor}} % format
 {
   \ifodd\c@page\else\thispagestyle{empty}\null\newpage\fi
   \flushright\zihao{4}第\zhnum{chapter}章
@@ -247,25 +248,24 @@
 \vspace{1ex}
 ] % after-code
 \CTEXsetup[name={第,
-章},number={\chinese{chapter}},format={\zihao{-4}\bfseries\raggedright}]{chapter}
-
+章},number={\chinese{chapter}},format={\zihao{-4}\bfseries\raggedright\color{maincolor}}]{chapter}
 % ==============================================================================
 % Section
 % ==============================================================================
+% 
 \titleformat{\section}
-[hang]
-{\rmfamily}
-{\zihao{-4}\bfseries{\thesection}\enspace}
-{1pt}
-{\zihao{4}\bfseries\filright}[]
+  [hang]
+  {\rmfamily\color{maincolor}}
+  {\hspace{-3.1cm}\parbox[t]{1.5cm}{\zihao{-4}\bfseries{\thesection}\enspace}}
+  {1pt}
+  {\zihao{4}\bfseries\filright}[]
 
 %% subsection
-\titleformat{\subsection}
-[hang]
-{\rmfamily}
-{\zihao{-4}\bfseries\thesubsection\enspace}
-{1pt}
-{\zihao{4}\bfseries\filright}[]
+  \titleformat{\subsection}[hang]
+  {\rmfamily}
+  {\hspace{-3.4cm}\parbox[t]{1.5cm}{\zihao{-4}\bfseries\thesubsection\enspace}}
+  {1pt}
+  {\zihao{4}\bfseries\filright}[]
 
 \renewcommand{\contentsname}{目\hspace{1em}录}
 \renewcommand{\figurename}{图}
@@ -287,11 +287,11 @@
   boxrule=.5pt,
   left=40pt, right=0pt, top=2pt, bottom=0pt,
   boxsep=10pt,
-  colframe=black,
+  colframe=maincolor,
   overlay={
     \node[anchor=north west,outer sep=10pt] at (frame.north west)
     {
-      \zihao{2}\textcolor{black}{\faIcon{key}}
+      \zihao{2}\textcolor{maincolor}{\faIcon{key}}
     };
   }
 }
@@ -303,11 +303,11 @@
   boxrule=.5pt,
   left=40pt, right=0pt, top=2pt, bottom=0pt,
   boxsep=10pt,
-  colframe=black,
+  colframe=maincolor,
   overlay={
     \node[anchor=north west,outer sep=10pt] at (frame.north west)
     {
-      \zihao{2}\textcolor{black}{\faIcon{exclamation-triangle}}
+      \zihao{2}\textcolor{maincolor}{\faIcon{exclamation-triangle}}
     };
   }
 }
@@ -319,11 +319,11 @@
   boxrule=.5pt,
   left=40pt, right=0pt, top=2pt, bottom=0pt,
   boxsep=10pt,
-  colframe=black,
+  colframe=maincolor,
   overlay={
     \node[anchor=north west,outer sep=10pt] at (frame.north west)
     {
-      \zihao{2}\textcolor{black}{\faIcon{info-circle}}
+      \zihao{2}\textcolor{maincolor}{\faIcon{info-circle}}
     };
   }
 }
@@ -335,11 +335,11 @@
   boxrule=.5pt,
   left=40pt, right=0pt, top=2pt, bottom=0pt,
   boxsep=10pt,
-  colframe=black,
+  colframe=maincolor,
   overlay={
     \node[anchor=north west,outer sep=10pt] at (frame.north west)
     {
-      \zihao{2}\textcolor{black}{\faIcon{ban}}
+      \zihao{2}\textcolor{maincolor}{\faIcon{ban}}
     };
   }
 }
@@ -359,7 +359,6 @@
   keywordstyle=\color{blue},
   numberstyle=\small\color{gray},
   stringstyle=\color{red},
-  morekeywords={as},
   breakatwhitespace=false,
   breaklines=true,
   captionpos=t,
@@ -388,7 +387,7 @@
   keywordstyle=\color{blue},
   numberstyle=\small\color{gray},
   stringstyle=\color{red},
-  morekeywords={as},
+  morekeywords={False, None, True, and, as, assert, async, await, break, class, continue, def, del, elif, else, except, False, finally, for, from, global, if, import, in, is, lambda, nonlocal, not, or, pass, raise, return, True, try, while, with, yield},
   breakatwhitespace=false,
   breaklines=true,
   captionpos=t,
@@ -418,6 +417,8 @@
   keywordstyle=\color{blue},
   numberstyle=\small\color{gray},
   stringstyle=\color{red},
+  morekeywords={alignas, alignof, and, and_eq, asm, auto, bitand, bitor, bool, break, case, catch, char, char8_t, char16_t, char32_t, class, compl, concept, const, consteval, constexpr, const_cast, continue, co_await, co_return, co_yield, decltype, default, delete, do, double, dynamic_cast, else, enum, explicit, export, extern, false, float, for, friend, goto, if, inline, int, long, mutable, namespace, new, noexcept, not, not_eq, nullptr, operator, or, or_eq, private, protected, public, register, reinterpret_cast, requires, return, short, signed, sizeof, static, static_assert, static_cast, struct, switch, template, this, thread_local, throw, true, try, typedef, typeid, typename, union, unsigned, using, virtual, void, volatile, wchar_t, while, xor, xor_eq
+},
   breakatwhitespace=false,
   breaklines=true,
   captionpos=t,
@@ -446,7 +447,7 @@
   keywordstyle=\color{blue},
   numberstyle=\small\color{gray},
   stringstyle=\color{red},
-  morekeywords={Enum},
+  morekeywords={abstract, case, catch, class, def, do, else, extends, false, final, finally, for, if, implicit, import, match, new, null, object, override, package, private, protected, return, sealed, super, this, throw, trait, try, true, type, val, var, while, with, yield},
   breakatwhitespace=false,
   breaklines=true,
   captionpos=t,
@@ -461,4 +462,22 @@
   showstringspaces=false,
   showtabs=false,
   breaklines=true,
+}
+
+% ==============================================================================
+% List style
+% ==============================================================================
+\setlist[enumerate,1]{left=0pt..2em,label=\arabic*.}
+\setlist[enumerate,2]{left=2em..4em,label=\alph*.}
+\setlist[enumerate,3]{left=4em..6em,label=\roman*.}
+\setlist[enumerate,4]{left=6em..8em,label=\Alph*.}
+
+% ==============================================================================
+% Ref style
+% ==============================================================================
+\hypersetup{
+  colorlinks=true,
+  linkcolor=maincolor,    % 设置链接颜色为蓝色
+  urlcolor=black,      % 设置URL颜色为红色
+  citecolor=black    % 设置引用颜色为绿色
 }
