--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,9 @@
     Your openright here!
 }
 
-% 
+% ==============================================================================
+% Chapter information
+% ==============================================================================
 \includeonly{
     preface/main,
     chapter1/main,
@@ -36,7 +38,9 @@
 
 \frontmatter
 
-
+% ==============================================================================
+% Preface
+% ==============================================================================
 \include{preface/main}
 
 \tableofcontents
