--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 %!TEX program = xelatex
 
-\documentclass[lang=zh]{boscmanual}
+\documentclass{boscmanual}
 \usepackage[sectionbib]{chapterbib}
 \usepackage{lipsum}
 \usepackage{zhlipsum}
@@ -19,6 +19,7 @@
     Your openright here!
 }
 
+
 % ==============================================================================
 % Chapter information
 % ==============================================================================
@@ -36,27 +37,31 @@
 % ==============================================================================
 \maketitle
 
-\frontmatter
-
 % ==============================================================================
 % Preface
 % ==============================================================================
+\frontmatter
 \include{preface/main}
 
+% ==============================================================================
+% Content
+% ==============================================================================
 \tableofcontents
 \listoffigures
 \listoftables
 
-\mainmatter
-
 % ==============================================================================
 % Chapters
 % ==============================================================================
+\mainmatter
 \part{模版介绍}
 \include{chapter1/main}
 \include{chapter2/main}
 \include{chapter3/main}
 
+% ==============================================================================
+% Appendix
+% ==============================================================================
 \backmatter
 \chapter{附录}
 
